v5.2.0_managedDisks_AS/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json# ",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "clusterSize": {
            "type": "int"
        },
        "providerID": {
            "type": "string"
        },
        "clusterName": {
            "type": "string",
            "defaultValue": ""
        },
         "location": {
            "type": "string",
            "defaultValue": ""
        },
        "publicIPAddressBasename" : {
            "type" : "string",
            "defaultValue": ""
        },
        "publicIPAddressType" : {
            "type" : "string",
            "defaultValue": ""
        },
        "nicBasename" : {
            "type" : "string",
            "defaultValue": ""
        },
        "vnetNewOrExisting": {
            "type": "string"
        },
        "vnetName": {
            "type": "string"
        },
        "vnetSubnetName": {
            "type": "string"
        },
        "vnetAddressPrefix": {
            "type": "string",
            "defaultValue": ""
        },
        "vnetSubnetAddressPrefix": {
            "type": "string"
        },
        "vnetStartAddress": {
            "type": "string"
        },
        "vnetRGName": {
            "type": "string"
        },                        
        "scriptsUri": {
            "type": "string"
        }        
    },
    "variables": {
        "ipOct": "[split(parameters('vnetStartAddress'), '.')]",
        "ipOct01": "[concat(variables('ipOct')[0], '.', variables('ipOct')[1], '.')]",
        "ipOct2": "[int(variables('ipOct')[2])]",
        "ipOct3": "[int(variables('ipOct')[3])]"        
    },
    "resources": [{
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(parameters('publicIPAddressBasename'), copyIndex())]",
      "tags": {
         "provider": "[toUpper(parameters('providerID'))]"
      },
      "location": "[parameters('location')]",
      "copy": {
          "name": "publicIPLoop",
          "count": "[parameters('clusterSize')]"
      },
      "properties": {
          "publicIPAllocationMethod": "[parameters('publicIPAddressType')]",
          "dnsSettings": {
       	      "domainNameLabel": "[concat(parameters('clusterName'), '-', substring(uniquestring(resourceGroup().id), 0, 8), '-node', copyIndex())]"
          }
      }
    },
    {
        "name": "[concat(parameters('clusterName'), '-vnet')]",
        "type": "Microsoft.Resources/deployments",
        "apiVersion": "2016-02-01",
        "properties": {
            "mode": "Incremental",
            "templateLink": {
            "uri": "[concat(parameters('scriptsUri'), 'vnet_', parameters('vnetNewOrExisting'), '.json')]",
            "contentVersion": "1.0.0.0"
            },
            "parameters": {
                "providerID": {
                    "value": "[parameters('providerID')]"
                },
                "vnetName": {
                    "value": "[parameters('vnetName')]"
                },
                "vnetAddressPrefix": {
                    "value": "[parameters('vnetAddressPrefix')]"
                },
                "vnetSubnetName": {
                    "value": "[parameters('vnetSubnetName')]"
                },
                "vnetSubnetAddressPrefix": {
                    "value": "[parameters('vnetSubnetAddressPrefix')]"
                },
                "location": {
                    "value": "[parameters('location')]"
                }
            }
        }
    },
    {
      "apiVersion": "2016-06-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('clusterName'), '-nsg')]",
      "location": "[parameters('location')]",
      "tags": {
         "provider": "[toUpper(parameters('providerID'))]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
                "description": "SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
            }
          },            
          {
            "name": "MCS",
            "properties": {
                "description": "MapR Control System",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "8443",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound"
            }
          }
        ]
      }
    },        
    {
        "apiVersion": "2016-06-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[concat(parameters('nicBasename'), copyIndex())]",
        "location": "[parameters('location')]",
        "tags": {
           "provider": "[toUpper(parameters('providerID'))]"
        },
        "dependsOn": [
            "[concat('Microsoft.Network/publicIPAddresses/', parameters('publicIPAddressBasename'), copyIndex())]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('clusterName'), '-nsg')]",
            "[concat('Microsoft.Resources/deployments/', parameters('clusterName'), '-vnet')]"
        ],
        "copy": {
            "name": "nicLoop",
            "count": "[parameters('clusterSize')]"
        },
        "properties": {
            "networkSecurityGroup": {
                "id": "[concat(resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('clusterName'), '-nsg')))]"
            },
            "ipConfigurations": [
            {
                "name": "ipconfig1",
                "properties": {
                    "privateIPAllocationMethod": "Static",
                    "privateIPAddress": "[concat(variables('ipOct01'), add(variables('ipOct2'), div(copyIndex(variables('ipOct3')), 256)), '.', mod(copyIndex(variables('ipOct3')), 256))]",
                    "subnet": {
                        "id": "[concat(resourceId(parameters('vnetRGName'), 'Microsoft.Network/virtualNetworks', parameters('vnetName')), '/subnets/', parameters('vnetSubnetName'))]"
                    },
                    "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('publicIPAddressBasename'), copyIndex()))]"
                    }
                }
            }
            ]
        }
    }
    ]
}
